  * Now also the GTK frontend, like the NEWT frontend, allows the user to go
    back by pressing the ESC key (closes: #339857).
  * Added a button in the main screen that allows the user to take screenshots
    in PNG format.
  * Added a couple of entries in cdebconf-gtk-udeb.templates to localize
    screenshot button and message for the GTK frontend and made it use them.

  [ Frans Pop ]
  * Add Standards-Version: back in; cdebconf also provides regular packages.

  [ Tollef Fog Heen ]
  * Move get_text common function from the text and newt frontend to
    question.h, likewise for convenience macros to question.h
  * Make it possible for frontend modules to chain onto the install
    Makefile rule
  * Rename some convenience functions in newt.c and unstaticify them, as
    they are quite convenient when writing plugins.
  * Install a useful set of headers so it's actually possible to build
    plugins outside the cdebconf tree.

  [ Christian Perrier ]
  * Add comments for translators in templates

 -- Christian Perrier <bubulle@debian.org>  Mon, 19 Dec 2005 20:37:31 +0100

cdebconf (0.91) unstable; urgency=low

  [ Attilio Fiandrotti ]
  * Fixed some memory leaks in GTK frontend.
  * If no default option(s) in SELECT and MULTISELECT is specified the first
    row gets selected by default.
  * Updated TODO doc file to reflect GTK frontend's staus.
  * Removed old and no longer needed lines of code.

  [ Frans Pop ]
  * libgtk+2.0-directfb-dev takes proper care of dependencies now.
  * Remove Standards-Version:, not applicable to udebs.

 -- Frans Pop <fjp@debian.org>  Mon,  7 Nov 2005 15:38:17 +0100

cdebconf (0.90) unstable; urgency=low

  [ Attilio Fiandrotti ]
  * Display short description above long description for notes and errors.
  * Skip description of questions during TAB navigation.
  * Improved packaging for multiple questions.
  * Fixed progress bar resume after interruption by question.

  [ Frans Pop ]