@@ -8,6 +8,8 @@ cdebconf (0.92) UNRELEASED; urgency=low
     in PNG format.
   * Added a couple of entries in cdebconf-gtk-udeb.templates to localize
     screenshot button and message for the GTK frontend and made it use them.
+  * Improved visibility of screenshot popup message and disabled screenshot
+    button while progressbar runs.
 
   [ Frans Pop ]
   * Add Standards-Version: back in; cdebconf also provides regular packages.
@@ -25,7 +27,7 @@ cdebconf (0.92) UNRELEASED; urgency=low
   [ Christian Perrier ]
   * Add comments for translators in templates
 
- -- Christian Perrier <bubulle@debian.org>  Mon, 19 Dec 2005 20:37:31 +0100
+ -- Attilio Fiandrotti <fiandro@tiscali.it>  Sun, 25 Dec 2005 18:24:04 +0100
 
 cdebconf (0.91) unstable; urgency=low
 
